# lidar_imu_correction

./: CMakeLists.txt  README.md  package.xml
config/: imu_lidar_params.yaml
include/: lidar_imu_correction_node.hpp
launch/: lidar_imu_correction.launch
src/: lidar_imu_correction_node.cpp
